[package]
name = "zappi-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diqwest = { version = "2.0.0", features = ["blocking"] }
influxdb = { version = "0.7.1", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json", "serde_json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["full"] }